Bug 1863408: Don't use LPAC for ASan builds. r=handyman

ASan requires access early in the process, which we don't get with an LPAC.

Differential Revision: https://phabricator.services.mozilla.com/D193091